force-app/main/default/objects/RegistrosDeErrores__c/RegistrosDeErrores__c.object-meta.xml
<CustomObject>
    <description>Este objeto es un registro de errores ocasionado por los Web Services donde se verá la clase donde se ha generado el error, el mensaje que hemos recibido y el código de error.</description>
    <label>Registro de Error</label>
    <nameField>
        <displayFormat>Error-{0000000}</displayFormat>
        <label>Nombre de Registros de Errores</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Registros de Errores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>