force-app/main/default/objects/RegistrosDeErrores__c/fields/ClaseGeneradora__c.field-meta.xml
<CustomField>
    <fullName>ClaseGeneradora__c</fullName>
    <description>Nos indica donde se ha ocasionado el error</description>
    <label>Clase Generadora</label>
    <length>100</length>
    <type>Text</type>
</CustomField>