force-app/main/default/objects/RegistrosDeErrores__c/fields/CodigoError__c.field-meta.xml
<CustomField>
    <fullName>CodigoError__c</fullName>
    <description>Nos indica el código donde se ha ocasionado dicho error</description>
    <label>Código de Error</label>
    <length>3</length>
    <type>Text</type>
</CustomField>