force-app/main/default/objects/RegistrosDeErrores__c/fields/DescripcionError__c.field-meta.xml
<CustomField>
    <fullName>DescripcionError__c</fullName>
    <description>Nos dice cual es la descripción del error generado.</description>
    <label>Descripción del Error</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>