force-app/main/default/objects/RegistrosDeErrores__c/fields/MensajeRecibido__c.field-meta.xml
<CustomField>
    <fullName>MensajeRecibido__c</fullName>
    <description>Nos indica que el mensaje  que hemos recibido para que se ocasione el error.</description>
    <label>Mensaje Recibido</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>