force-app/main/default/objects/RegistrosDeErrores__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CodigoError__c</columns>
    <columns>DescripcionError__c</columns>
    <columns>ClaseGeneradora__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>